Changed header size for name and fixed width overflow

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   background-color: rgb(0, 69, 11);
   background-image: url("images/background.png");
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .portfolio {
@@ -19,10 +20,21 @@ body {
   font-size: 100%;
 }
 
+.portfolio name {
+  font-family: "FixedsysExcelsiorIIIb";
+  display: inline-flex;
+  font-size: 6rem;
+  color: #87f1b4;
+  background-color: #006400;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-top: 35px;
+}
+
 .portfolio h1 {
   font-family: "FixedsysExcelsiorIIIb";
   display: inline-flex;
-  font-size: 5rem;
+  font-size: 4rem;
   color: #87f1b4;
   background-color: #006400;
   padding-left: 5px;
@@ -71,7 +83,7 @@ body {
   justify-content: center;
   gap: 2rem;
   margin: 2rem auto;
-  margin-top: 0px;
+  margin-top: 25px;
   max-width: 1000px;
   padding: 1rem;
 }
@@ -93,7 +105,7 @@ body {
 
 .skills {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 25px;
   justify-self: center;
 }
 
@@ -117,7 +129,7 @@ body {
 
 .projects {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 25px;
   justify-self: center;
 }
 
@@ -170,6 +182,7 @@ body {
   row-gap: 1rem;
   max-width: 80%;
   margin: 1rem auto;
+  margin-bottom: 200px;
 }
 
 .contact_container > figure > a > img {
@@ -220,8 +233,16 @@ li a:hover {
 }
 
 @media (max-width: 768px) {
+  .body {
+    background-size: 100%;
+    background-position: top right;
+  }
   .title {
     padding-top: 10%;
+  }
+  .portfolio name {
+    padding-left: 0px;
+    padding-right: 0px;
   }
   .about-section {
     flex-direction: column;
